--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,11 @@ jobs:
       with:
         go-version: '1.23'
 
-    - name: Build
-      run: go build -v ./...
-
     - name: Test
-      run: go test -v ./...
+      run: go test ./...
+
+    - name: Build
+      run: go build ./cmd
+
+    - name: Check mysqlbinlog
+      run: test -x pkg/bin/mysqlbinlog || ls -l pkg/bin/mysqlbinlog
