--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go test ./...
 
     - name: Build
-      run: go build ./cmd
+      run: go build -o find-binlog ./cmd
 
     - name: Check mysqlbinlog
       run: test -x pkg/bin/mysqlbinlog || ls -l pkg/bin/mysqlbinlog
